sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Async Requests</relationshipLabel>
    <relationshipName>AsyncRequests</relationshipName>
    <type>Lookup</type>
</CustomField>