sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/AsyncType__c.field-meta.xml
<CustomField>
    <fullName>AsyncType__c</fullName>
    <label>AsyncType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ApexShareRecordQueryQueueable</fullName>
            </value>
            <value>
                <fullName>ApexShareReferenceScanQueueable</fullName>
            </value>
            <value>
                <fullName>ScanComponentDependenciesQueueable</fullName>
            </value>
            <value>
                <fullName>ScanResultsQueueable</fullName>
            </value>
            <value>
                <fullName>ScanSharingReasonsQueueable</fullName>
            </value>
            <value>
                <fullName>TestProcessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>