sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/IsDependent__c.field-meta.xml
<CustomField>
    <fullName>IsDependent__c</fullName>
    <formula>ParentRequest__c != NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDependent</label>
    <type>Checkbox</type>
</CustomField>