sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/LastExecutedBy__c.field-meta.xml
<CustomField>
    <fullName>LastExecutedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExecutedAsyncRequests</relationshipName>
    <type>Lookup</type>
</CustomField>