sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/NumberOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>