sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <label>Params</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>