sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/ParentRequest__c.field-meta.xml
<CustomField>
    <fullName>ParentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Request</label>
    <referenceTo>AsyncRequest__c</referenceTo>
    <relationshipName>ChildRequests</relationshipName>
    <type>Lookup</type>
</CustomField>