sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Datetime</label>
    <type>DateTime</type>
</CustomField>