sfdc-ac-transition-pkg/force-app/main/default/objects/AsyncRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AsyncType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>StartDatetime__c</columns>
    <columns>NumberOfAttempts__c</columns>
    <columns>Error__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>